--- a/chassis/MDK-ARM/standard_tpye_c/standard_tpye_c.build_log.htm
+++ b/chassis/MDK-ARM/standard_tpye_c/standard_tpye_c.build_log.htm
@@ -22,14 +22,19 @@ Dialog DLL:      TCM.DLL V1.56.4.0
  
 <h2>Project:</h2>
 C:\Users\13708\Desktop\two_broard\radar_turn\chassis\MDK-ARM\standard_robot.uvprojx
-Project File Date:  01/19/2024
+Project File Date:  03/02/2024
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.19', folder: 'D:\keil\ARM\ARMCLANG\Bin'
 Build target 'standard_robot'
+compiling freertos.c...
+compiling chassis_power_control.c...
+compiling chassis_behaviour.c...
+compiling main.c...
 compiling chassis_task.c...
+compiling CAN_receive.c...
 linking...
-Program Size: Code=91700 RO-data=6636 RW-data=632 ZI-data=58280  
+Program Size: Code=96624 RO-data=7680 RW-data=1040 ZI-data=64608  
 "standard_tpye_c\standard_tpye_c.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
@@ -53,7 +58,7 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.6.0
-Build Time Elapsed:  00:00:07
+Build Time Elapsed:  00:00:02
 </pre>
 </body>
 </html>
