--- a/chassis/MDK-ARM/standard_tpye_c/standard_tpye_c.build_log.htm
+++ b/chassis/MDK-ARM/standard_tpye_c/standard_tpye_c.build_log.htm
@@ -26,121 +26,10 @@ Project File Date:  03/02/2024
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.19', folder: 'D:\keil\ARM\ARMCLANG\Bin'
-Rebuild target 'standard_robot'
-assembling startup_stm32f407xx.s...
-compiling dma.c...
-compiling can.c...
-compiling rtc.c...
-compiling rng.c...
-compiling i2c.c...
-compiling crc.c...
-compiling gpio.c...
-compiling adc.c...
+Build target 'standard_robot'
 compiling main.c...
-compiling freertos.c...
-compiling spi.c...
-compiling usart.c...
-compiling tim.c...
-compiling usb_device.c...
-compiling usbd_conf.c...
-compiling usbd_desc.c...
-compiling stm32f4xx_it.c...
-compiling stm32f4xx_hal_msp.c...
-compiling bsp_adc.c...
-compiling system_stm32f4xx.c...
-compiling bsp_buzzer.c...
-compiling usbd_cdc_if.c...
-compiling bsp_can.c...
-compiling bsp_crc32.c...
-compiling bsp_delay.c...
-compiling bsp_flash.c...
-compiling bsp_fric.c...
-compiling bsp_imu_pwm.c...
-compiling bsp_led.c...
-compiling bsp_i2c.c...
-compiling bsp_laser.c...
-compiling bsp_rc.c...
-compiling bsp_rng.c...
-compiling bsp_servo_pwm.c...
-compiling bsp_usart.c...
-compiling bsp_dwt.c...
-compiling bsp_PWM.c...
-compiling bsp_spi.c...
-compiling detect_task.c...
-compiling chassis_behaviour.c...
-compiling chassis_power_control.c...
-compiling oled_task.c...
-compiling referee.c...
-compiling referee_usart_task.c...
-compiling chassis_task.c...
-compiling remote_control.c...
-compiling test_task.c...
-compiling CAN_receive.c...
-compiling voltage_task.c...
-compiling led_flow_task.c...
-compiling ist8310driver.c...
-compiling BMI088driver.c...
-compiling OLED.c...
-compiling ins_task.c...
-compiling user_lib.c...
-compiling ist8310driver_middleware.c...
-compiling AHRS_middleware.c...
-compiling BMI088Middleware.c...
-compiling QuaternionEKF.c...
-compiling CRC8_CRC16.c...
-compiling kalman_filter.c...
-compiling mem_mang4.c...
-compiling pid.c...
-compiling stm32.c...
-compiling fifo.c...
-compiling controller.c...
-compiling stm32f4xx_hal_pcd_ex.c...
-compiling stm32f4xx_hal_pcd.c...
-compiling stm32f4xx_hal_flash_ramfunc.c...
-compiling stm32f4xx_hal_rcc_ex.c...
-compiling stm32f4xx_hal_rcc.c...
-compiling stm32f4xx_hal_flash_ex.c...
-compiling stm32f4xx_hal_flash.c...
-compiling stm32f4xx_hal_gpio.c...
-compiling stm32f4xx_hal_dma_ex.c...
-compiling stm32f4xx_hal_pwr.c...
-compiling stm32f4xx_ll_usb.c...
-compiling stm32f4xx_hal_dma.c...
-compiling stm32f4xx_hal_pwr_ex.c...
-compiling stm32f4xx_hal_cortex.c...
-compiling stm32f4xx_hal.c...
-compiling stm32f4xx_hal_exti.c...
-compiling stm32f4xx_hal_adc_ex.c...
-compiling stm32f4xx_hal_crc.c...
-compiling stm32f4xx_hal_i2c_ex.c...
-compiling stm32f4xx_hal_adc.c...
-compiling stm32f4xx_hal_rng.c...
-compiling stm32f4xx_hal_can.c...
-compiling croutine.c...
-compiling stm32f4xx_hal_rtc.c...
-compiling list.c...
-compiling event_groups.c...
-compiling stm32f4xx_hal_rtc_ex.c...
-compiling stm32f4xx_hal_tim_ex.c...
-compiling queue.c...
-compiling stm32f4xx_hal_spi.c...
-compiling stm32f4xx_hal_uart.c...
-compiling stream_buffer.c...
-compiling heap_4.c...
-compiling timers.c...
-compiling port.c...
-compiling stm32f4xx_hal_tim.c...
-compiling cmsis_os.c...
-compiling tasks.c...
-compiling SEGGER_RTT_printf.c...
-compiling stm32f4xx_hal_i2c.c...
-compiling usbd_ioreq.c...
-compiling SEGGER_RTT.c...
-compiling usbd_core.c...
-compiling usbd_cdc.c...
-compiling usbd_ctlreq.c...
 linking...
-Program Size: Code=100600 RO-data=7680 RW-data=1040 ZI-data=65104  
+Program Size: Code=100168 RO-data=7680 RW-data=1040 ZI-data=65104  
 "standard_tpye_c\standard_tpye_c.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
@@ -164,7 +53,7 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.6.0
-Build Time Elapsed:  00:00:05
+Build Time Elapsed:  00:00:08
 </pre>
 </body>
 </html>
